objects/Plastic__c.object
<CustomObject>
    <fields>
        <fullName>Amended_Contract_Info__c</fullName>
        <formula>IF(
	ISBLANK(opportunity__r.SBQQ__AmendedContract__c),
	'There is no amended contract...',
	opportunity__r.SBQQ__AmendedContract__r.ContractNumber +  BR() + 
	'Created Date: ' + TEXT(opportunity__r.SBQQ__AmendedContract__r.CreatedDate) + BR() +
	'Is Variable: ' + IF(opportunity__r.SBQQ__AmendedContract__r.Multiple_Years_Commitment__c,'true','false') + 
	BR()  + 'Current Year: ' +
	TEXT(opportunity__r.SBQQ__AmendedContract__r.Current_Year__c)
	+ BR() + 'Term Years: ' +
	opportunity__r.SBQQ__AmendedContract__r.Parent_Contract_Term_Years__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amended Contract Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date_Month__c</fullName>
        <formula>CASE(MONTH(opportunity__r.CloseDate), 1, "January", 2, "February", 3, "March", 4, "April", 5, "May", 6, "June", 7, "July", 8, "August", 9, "September", 10, "October", 11, "November", 12, "December", "None") &amp; " " &amp; TEXT(YEAR(opportunity__r.CloseDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Implemented__c</fullName>
        <formula>opportunity__r.Contract_Implemented__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Implemented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contracts_Management_Notes__c</fullName>
        <label>Contracts Management Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Create_Child_Contract_Checked__c</fullName>
        <formula>opportunity__r.SBQQ__Contracted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Child Contract Checked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Renewal_Creation_Date__c</fullName>
        <formula>childContract__r.Renewal_Creation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Renewal Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Failed_Auto_Renew_Checked__c</fullName>
        <formula>childContract__r.Failed_Auto_Renew__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failed Auto Renew Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Variable_Options__c</fullName>
        <formula>opportunity__r.SBQQ__RenewedContract__r.Multiple_Years_Commitment__c = true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Variable Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_to_Amended_Contract__c</fullName>
        <formula>IF(
NOT(ISBLANK(opportunity__r.SBQQ__AmendedContract__c)),
'https://cvent.my.salesforce.com/' + opportunity__r.SBQQ__AmendedContract__c,
'There is no amended contract...'
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Amended Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Opportunity__c</fullName>
        <formula>IF( 

childContract__r.SBQQ__Opportunity__c != null, 

"https://cvent.my.salesforce.com/" + childContract__r.SBQQ__Opportunity__c, 

'There is no previous opportunity....' 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity (child created from) Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Primary_Quote__c</fullName>
        <formula>"https://cvent.my.salesforce.com/" + opportunity__r.SBQQ__PrimaryQuote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Primary Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_UI_ID__c</fullName>
        <description>Opportunity ID</description>
        <formula>opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity ID</inlineHelpText>
        <label>Opportunity 15 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Op_Close_Date__c</fullName>
        <formula>opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>CASESAFEID( opportunity__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>opportunity__r.Owner.FirstName + ' ' + opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Quote_Info__c</fullName>
        <formula>opportunity__r.SBQQ__PrimaryQuote__r.Name +  BR() + 
'Created Date: ' + TEXT(opportunity__r.SBQQ__PrimaryQuote__r.CreatedDate) + BR() +
'Type: ' + TEXT(opportunity__r.SBQQ__PrimaryQuote__r.SBQQ__Type__c) + 
BR() + 'SBQQ__MasterContract__c: ' +
IF(
	NOT(ISBLANK(opportunity__r.SBQQ__PrimaryQuote__r.SBQQ__MasterContract__c)),
	opportunity__r.SBQQ__PrimaryQuote__r.SBQQ__MasterContract__r.ContractNumber,
	'null'
)
+ BR() + 'Current Year: ' +
TEXT(opportunity__r.SBQQ__PrimaryQuote__r.Current_Year__c)
+ BR() + 'Term Years: ' +
TEXT(opportunity__r.SBQQ__PrimaryQuote__r.Contract_Term_Years__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Quote Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product related to each Opportunity</description>
        <formula>TEXT(opportunity__r.Product__c)</formula>
        <inlineHelpText>Product related to each Opporutnity</inlineHelpText>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_was_Transformed__c</fullName>
        <formula>opportunity__r.SBQQ__PrimaryQuote__r.Cloned_from_Quote__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote was Transformed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Failure_Information__c</fullName>
        <label>Renewal Failure Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity_Link__c</fullName>
        <formula>IF(

childContract__r.SBQQ__RenewalOpportunity__c != null,

"https://cvent.my.salesforce.com/" + childContract__r.SBQQ__RenewalOpportunity__c,

'There is no renewal opportunity....'

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Opportunity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Quoted_Checked__c</fullName>
        <formula>childContract__r.SBQQ__RenewalQuoted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Quoted Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>lgUfrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>checkbox0__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkbox1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Clubbing/Reassignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>childContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Contract being Renewed</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>CPQ Issue Resolutions</relationshipLabel>
        <relationshipName>lgUfrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>contractRecentlyAmended__c</fullName>
        <formula>IF(

	opportunity__r.SBQQ__RenewedContract__r.contractedAmendmentQuote__c != null,

	'Yes - ' + opportunity__r.SBQQ__RenewedContract__r.contractedAmendmentQuote__r.Name,

	IF(

		childContract__r.contractedAmendmentQuote__c != null,

		'Yes - ' + childContract__r.contractedAmendmentQuote__r.Name,
		
		'No recent amendment quote found...'
		
	)
	
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Recently Amended?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>formula0__c</fullName>
        <formula>opportunity__r.SBQQ__RenewedContract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewed Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>formula1__c</fullName>
        <formula>"https://cvent.my.salesforce.com/" + opportunity__r.SBQQ__RenewedContract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Renewed Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>formula2__c</fullName>
        <formula>opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grouping__c</fullName>
        <label>grouping</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>longTextArea0__c</fullName>
        <label>FP&amp;A Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>longTextArea1__c</fullName>
        <label>CRM/Simplus/PMO Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>longTextArea2__c</fullName>
        <label>CI Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>lgUfrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>picklist0__c</fullName>
        <label>Team Responsible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CI</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>SQ Team</fullName>
                </value>
                <value>
                    <fullName>CRM/Simplus/PMO</fullName>
                </value>
                <value>
                    <fullName>AR Help</fullName>
                </value>
                <value>
                    <fullName>Sales Team</fullName>
                </value>
                <value>
                    <fullName>FP&amp;A</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>picklist1__c</fullName>
        <label>Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nick</fullName>
                </value>
                <value>
                    <fullName>Megan</fullName>
                </value>
                <value>
                    <fullName>Aaron</fullName>
                </value>
                <value>
                    <fullName>Mukul</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>CRM_Project__c</referenceTo>
        <relationshipLabel>CPQ Issue Resolutions</relationshipLabel>
        <relationshipName>CPQ_Issue_Resolutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipName>Plastic_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CPQ Issue Resolution</label>
    <nameField>
        <displayFormat>PLSTC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Issue Resolutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_MYD_Issue_Opps</fullName>
        <columns>NAME</columns>
        <columns>checkbox0__c</columns>
        <columns>opportunity__c</columns>
        <columns>formula0__c</columns>
        <columns>formula2__c</columns>
        <columns>checkbox1__c</columns>
        <columns>picklist1__c</columns>
        <columns>formula1__c</columns>
        <columns>longTextArea2__c</columns>
        <columns>longTextArea1__c</columns>
        <columns>longTextArea0__c</columns>
        <columns>longTextArea3__c</columns>
        <columns>picklist0__c</columns>
        <filterScope>Everything</filterScope>
        <label>All MYD Issue Opps</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Megan</fullName>
        <columns>NAME</columns>
        <columns>opportunity__c</columns>
        <columns>formula2__c</columns>
        <columns>picklist1__c</columns>
        <columns>formula0__c</columns>
        <columns>checkbox0__c</columns>
        <columns>longTextArea4__c</columns>
        <columns>longTextArea2__c</columns>
        <columns>longTextArea1__c</columns>
        <columns>longTextArea0__c</columns>
        <columns>formula1__c</columns>
        <columns>longTextArea3__c</columns>
        <columns>picklist0__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>picklist1__c</field>
            <operation>equals</operation>
            <value>Megan</value>
        </filters>
        <label>Megan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Nick</fullName>
        <columns>NAME</columns>
        <columns>opportunity__c</columns>
        <columns>checkbox0__c</columns>
        <columns>picklist1__c</columns>
        <columns>formula0__c</columns>
        <columns>longTextArea0__c</columns>
        <columns>longTextArea1__c</columns>
        <columns>longTextArea2__c</columns>
        <columns>longTextArea3__c</columns>
        <columns>picklist0__c</columns>
        <columns>longTextArea4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>picklist1__c</field>
            <operation>equals</operation>
            <value>Nick</value>
        </filters>
        <label>Nick</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Contract_Amendment_Creation_Issue</fullName>
        <active>true</active>
        <description>This record type is used to track occurrences where child contracts fail to amend or generate.</description>
        <label>Contract Amendment/Creation Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>MYD_Quote_Issue</fullName>
        <active>true</active>
        <description>This record type is used to specify issues where MYD quotes have unexpected values.</description>
        <label>MYD Quote Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal_Failure</fullName>
        <active>true</active>
        <description>This record type is used to track occurrences where child contracts fail to renew.</description>
        <label>Renewal Failure</label>
    </recordTypes>
</CustomObject>